Fix scrollbar-x home

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,6 @@ a:visited{
 #searchForm{
 	position: relative;
 	width:100%;
-	padding: 1em;
 	margin-top: -25em;
 	display: flex;
 	border-radius: 1em;
@@ -316,7 +315,7 @@ a:visited{
 	font-size: 1.1em;
 	border: 1px solid gray;
 	border-radius: 0.5em;
-	box-shadow:0 0 2em #292319;
+	box-shadow:0 0 1em #292319;
 }
 
 #searchForm button{
